force-app/main/default/objects/ClaimHeader__c/ClaimHeader__c.object-meta.xml
<CustomObject>
    <description>Contains summary information about the claim, such as the payment amount, specified medications, and billing data. </description>
    <label>ClaimHeader</label>
    <nameField>
        <displayFormat>21{0000000000}</displayFormat>
        <label>ClaimNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClaimHeader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>