force-app/main/default/objects/ClaimHeader__c/fields/AcceptedOn__c.field-meta.xml
<CustomField>
    <fullName>AcceptedOn__c</fullName>
    <description>Date on which the claim was accepted.</description>
    <inlineHelpText>Date on which the claim was accepted.</inlineHelpText>
    <label>AcceptedOn</label>
    <type>Date</type>
</CustomField>