force-app/main/default/objects/ClaimHeader__c/fields/AdjudicatedAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjudicatedAmount__c</fullName>
    <description>Amount paid for the service by primary payer.</description>
    <inlineHelpText>Amount paid for the service by primary payer.</inlineHelpText>
    <label>AdjudicatedAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>