force-app/main/default/objects/ClaimHeader__c/fields/AdjudicatedOn__c.field-meta.xml
<CustomField>
    <fullName>AdjudicatedOn__c</fullName>
    <description>Date on which adjudication amount was paid by the primary payer.</description>
    <inlineHelpText>Date on which adjudication amount was paid by the primary payer.</inlineHelpText>
    <label>AdjudicatedOn</label>
    <type>Date</type>
</CustomField>