force-app/main/default/objects/ClaimHeader__c/fields/BilledDRGCode__c.field-meta.xml
<CustomField>
    <fullName>BilledDRGCode__c</fullName>
    <description>Diagnosis-related group (DRG) code used for billing.</description>
    <inlineHelpText>Diagnosis-related group (DRG) code used for billing.</inlineHelpText>
    <label>BilledDRGCode</label>
    <length>32</length>
    <type>Text</type>
</CustomField>