force-app/main/default/objects/ClaimHeader__c/fields/ClaimAmount__c.field-meta.xml
<CustomField>
    <fullName>ClaimAmount__c</fullName>
    <label>ClaimAmount-Rollup</label>
    <summarizedField>ClaimLine__c.Price__c</summarizedField>
    <summaryForeignKey>ClaimLine__c.ClaimId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>