force-app/main/default/objects/ClaimHeader__c/fields/MemberPlanId__c.field-meta.xml
<CustomField>
    <fullName>MemberPlanId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>ID of member plan that this claim is related to.</inlineHelpText>
    <label>MemberPlanId</label>
    <referenceTo>PlanBenefit__c</referenceTo>
    <relationshipLabel>Member Plan Id</relationshipLabel>
    <relationshipName>ClaimHeaderMemberPlan</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>