force-app/main/default/objects/ClaimHeader__c/fields/PayerId__c.field-meta.xml
<CustomField>
    <fullName>PayerId__c</fullName>
    <label>PayerId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>