force-app/main/default/objects/ClaimHeader__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <inlineHelpText>Date on which claim was paid out.</inlineHelpText>
    <label>PaymentDate</label>
    <type>Date</type>
</CustomField>