force-app/main/default/objects/ClaimHeader__c/fields/PreauthNumber__c.field-meta.xml
<CustomField>
    <fullName>PreauthNumber__c</fullName>
    <inlineHelpText>Preauthorization number for the service.</inlineHelpText>
    <label>PreauthNumber</label>
    <length>32</length>
    <type>Text</type>
</CustomField>