force-app/main/default/objects/ClaimHeader__c/fields/ReferralNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferralNumber__c</fullName>
    <inlineHelpText>ID of the referral for the service.</inlineHelpText>
    <label>ReferralNumber</label>
    <length>32</length>
    <type>Text</type>
</CustomField>