force-app/main/default/objects/ClaimHeader__c/fields/SubmittedOn__c.field-meta.xml
<CustomField>
    <fullName>SubmittedOn__c</fullName>
    <inlineHelpText>Claim submission date.</inlineHelpText>
    <label>SubmittedOn</label>
    <type>Date</type>
</CustomField>