force-app/main/default/objects/ClaimHeader__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClaimAmount__c</columns>
    <columns>Name__c</columns>
    <columns>ClaimStatusId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>